src/test/deca/syntax/invalid/resultats/test3_empty-synt.res
./src/test/deca/syntax/invalid/test3_empty.deca:11:0: no viable alternative at input 'idf'
